* Added the email settings link to the discussion mailer notifications * Bolded the video title * Shrunk the anchor avatar from 60px to 50px * Dropped the character count on description previews from 175 to 160 * Increased the news item spacing from 15px to 25px * Fixed an issue with the comment form shifting after opening the invitation area * Fixed an issue when attempting to hide the invitation area that accidently added some unwanted extra padding

--- a/public/stylesheets/activity.css
+++ b/public/stylesheets/activity.css
@@ -1,5 +1,5 @@
 .item {
-	margin-top: 15px;
+	margin-top: 25px;
 	width: 100%;
 }
 
@@ -20,38 +20,32 @@
 .item .image {
 	text-align: right;
 	vertical-align: top;
-	width: 62px;
+	width: 52px;
 }
 
 .item .image img {
 	border: 1px solid #E5E5E5;
-	height: 60px;
-	width: 60px;
-}
-
-.item .title {
-	font-size: 11pt;
-	line-height: 11pt;
-	height: 26px;
+	height: 50px;
+	width: 50px;
 }
 
 .item .title a {
 	font-size: 11pt;
+	font-weight: bold;
 }
 
 .item .avatar {
 	text-align: right;
-	width: 35px;
+	width: 30px;
 }
 
 .item .avatar img {
 	border: 1px solid #E5E5E5;
-	height: 28px;
-	width: 28px;
+	height: 23px;
+	width: 23px;
 }
 
 .item .status {
-	height: 31px;
 	padding-left: 5px;
 }
 
